[gd_scene load_steps=2 format=3 uid="uid://message_bubble_scene"]

[ext_resource type="Script" path="res://ui/message_bubble.gd" id="1"]

[node name="MessageBubble" type="MarginContainer"]
offset_right = 300.0
offset_bottom = 60.0
script = ExtResource("1")

[node name="BubblePanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="BubblePanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="MessageText" type="RichTextLabel" parent="BubblePanel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
bbcode_enabled = true
text = "Текст повідомлення"
fit_content = true
autowrap_mode = 3

[node name="TimeLabel" type="Label" parent="BubblePanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "12:34"
horizontal_alignment = 2
